<resources>
    <string name="app_name">ticktacktoe</string>
    <string name="player_1">PLAYER 1</string>
    <string name="player_2">PLAYER 2</string>
    <string name="symbolX">X</string>
    <string name="symbolO">O</string>
    <string name="player_1_s_turn">Player 1\'s Turn…</string>
    <string name="player_1_s_wins">Player 1 Wins…</string>
    <string name="player_2_s_turn">Player 2\'s Turn…</string>
    <string name="player_2_s_wins">Player 2 Wins…</string>
    <string name="soldier">SOLDIER</string>
    <string name="draw">DRAW</string>
    <string name="play_again">Play Again?</string>
    <string name="pawn">PAWN</string>
</resources>