<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/squid_game_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/squid_game_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="#000000"
        tools:layout_editor_absoluteX="203dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="168dp"
        android:layout_marginTop="150dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/playerLayout_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/squidGreenIdentifier"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/squid_game_font"
                android:text="@string/player_1"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/playerSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/squid_game_font"
                android:text="@string/symbolX"
                android:textColor="@color/squidGreen"
                android:textSize="60sp" />

            <Button
                android:id="@+id/playAgainButton_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/squid_game_font"
                android:text="@string/play_again"
                android:visibility="gone" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/playerLayout_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/squidRedIdentifier"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/squid_game_font"
                android:text="@string/player_2"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/playerSymbol2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/squid_game_font"
                android:text="@string/symbolO"
                android:textColor="@color/squidRed"
                android:textSize="60sp" />

            <Button
                android:id="@+id/playAgainButton_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/squid_game_font"
                android:text="@string/play_again"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridBoard"
        android:layout_width="403dp"
        android:layout_height="495dp"
        android:columnCount="3"
        android:padding="10dp"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873">

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:adjustViewBounds="false"
            android:background="@drawable/button_border"
            android:onClick="onCellClicked"
            android:contentDescription="@string/pawn"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:adjustViewBounds="false"
            android:background="@drawable/button_border"
            android:contentDescription="@string/pawn"
            android:onClick="onCellClicked"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/button3"
            android:contentDescription="@string/pawn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:adjustViewBounds="false"
            android:background="@drawable/button_border"
            android:onClick="onCellClicked"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/button4"
            android:contentDescription="@string/pawn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:adjustViewBounds="false"
            android:background="@drawable/button_border"
            android:onClick="onCellClicked"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/button5"
            android:contentDescription="@string/pawn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:adjustViewBounds="false"
            android:background="@drawable/button_border"
            android:onClick="onCellClicked"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/button6"
            android:contentDescription="@string/pawn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:adjustViewBounds="false"
            android:background="@drawable/button_border"
            android:onClick="onCellClicked"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/button7"
            android:contentDescription="@string/pawn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:adjustViewBounds="false"
            android:background="@drawable/button_border"
            android:onClick="onCellClicked"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/button8"
            android:contentDescription="@string/pawn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:adjustViewBounds="false"
            android:background="@drawable/button_border"
            android:onClick="onCellClicked"
            android:scaleType="centerCrop" />

        <ImageButton
            android:id="@+id/button9"
            android:contentDescription="@string/pawn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:adjustViewBounds="false"
            android:background="@drawable/button_border"
            android:onClick="onCellClicked"
            android:scaleType="centerCrop" />

    </GridLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="399dp"
        android:layout_height="147dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/soldier"
            android:scaleType="fitCenter"
            android:src="@drawable/soldier" />

        <TextView
            android:id="@+id/turnIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/squid_game_font"
            android:gravity="center"
            android:letterSpacing="0.08"
            android:padding="10dp"
            android:shadowColor="#000000"
            android:shadowRadius="5"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>